[package]
name = "samaritan_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-files = "*"
actix-rt = "*"
actix-web = "*"
actix-web-actors = "*"
env_logger = "0.8"
log = "0.4"
derive_more = "0.99.17"
rand = "0.8.5"
subxt = "0.25.0"
sp-core = "11.0.0"
serde = "1.0.152"
serde_json = "1.0.91"
ipfs-api-backend-actix = "0.7"
ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"], default-features = false }
futures-lite = "1.12.0"
subxt-cli = "0.25.0"
parity-scale-codec = "3.2.1"
sp-keyring = "13.0.0"